<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/loginWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:scaleType="centerInside"
            android:src="@drawable/logo_white"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/txtUsername"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_username"
            android:padding="8dp"
            android:inputType="text"
            android:background="@drawable/border"
            android:drawableStart="@drawable/username32"
            android:textColor="@color/white"
            android:textColorHint="#99ffffff"
            android:maxLines="1" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_password"
            android:padding="8dp"
            android:inputType="textPassword"
            android:background="@drawable/border"
            android:drawableStart="@drawable/password32"
            android:textColor="@color/white"
            android:textColorHint="#99ffffff"
            android:maxLines="1" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:background="@drawable/rounded_btn_login"
            android:text="@string/btn_login"
            android:textColor="@color/input_login" />
    </LinearLayout>

</LinearLayout>