<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".AddTodoActivity">

    <ScrollView
        android:id="@+id/add_todo_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:ignore="InefficientWeight,UselessParent">

        <LinearLayout
            android:id="@+id/add_todo_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <CheckBox
                android:id="@+id/cbNghiphep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noteNghiphep" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etName_vn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name_vn"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etLayoutDiachi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etDiachi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/address"
                    android:inputType="textCapWords"
                    android:singleLine="false"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="11dp"
                    android:textColor="#999999"
                    android:text="Nhập tối thiểu tên phường/xã, quận/huyện, tỉnh/thành để hệ thống kiểm tra vị trí chuẩn xác"
                    tools:ignore="HardcodedText,RtlHardcoded,SpUsage" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llTime_begin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="Từ ngày"
                        android:layout_weight="1"
                        tools:ignore="HardcodedText,TextFields" />

                    <TextView
                        android:id="@+id/tvTime_begin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="0000-00-00 00:00"
                        tools:ignore="HardcodedText,TextFields" />

                    <Button
                        android:id="@+id/btnSetBegin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Chọn" />

                </LinearLayout>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/llTime_end"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="Đến ngày"
                        android:layout_weight="1"
                        tools:ignore="HardcodedText,TextFields" />

                    <TextView
                        android:id="@+id/tvTime_end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:text="0000-00-00 00:00"
                        tools:ignore="HardcodedText,TextFields" />

                    <Button
                        android:id="@+id/btnSetEnd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Chọn" />

                </LinearLayout>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/etLayoutGhichu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etGhichu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Nội dung công việc"
                    android:inputType="textMultiLine"
                    tools:ignore="HardcodedText" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ba1219"
        android:backgroundTint="#ba1219"
        android:text="@string/save"
        android:textColor="@color/btn_login_bg"
        tools:ignore="UnusedAttribute" />

</LinearLayout>
